--- a/index.html
+++ b/index.html
@@ -1,119 +1,83 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | asteroids</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">asteroids</div>
-      </div>
-    </div>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <!-- the close btn its outside header bc its in front of everything -->
+        <nav class="cross-supreme">
+            
+            <input class="cross-checkbox" id="menu-cross" type="checkbox"
+                name="menu-cross" onclick="navOpenClose()" />
+            <nav class="menu-cross">
+                <label class="cross" for="menu-cross">
+                    <p>&times;</p>
+                </label>
+            </nav>
+        </nav>
+        <header class="menu" id="myNav">
+            <nav>
+                <ul>
+                    <li><a href="#about" data-text="about">About</a></li>
+                    <li><a href="#projects" data-text="projects">Projects</a></li>
+                    <li><a href="#contact" data-text="contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section id="about">
+                <a href="unity.html">hola</a>
+                <h1>About Me</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                    pellentesque orci id mi fermentum, a lobortis ante faucibus.
+                    Curabitur nulla est, tincidunt non purus vel, consectetur
+                    tempus metus. In ac mi justo.</p>
+                    <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem sapiente aspernatur harum consectetur soluta dignissimos repellat esse vero fugiat neque? Dignissimos adipisci optio ex. Sit corrupti mollitia error iste ab veniam commodi porro! Quae officiis, perferendis molestias ullam molestiae totam modi reiciendis porro repellendus expedita minima qui dicta ad quasi ipsum aperiam repellat dolor dolorem? Excepturi inventore suscipit, perferendis est ipsum iste blanditiis at aliquid necessitatibus totam ipsa! Nemo aspernatur eum officia quas nesciunt ab commodi impedit eos quis quam quasi laudantium, labore earum nam possimus consequatur provident minus voluptates quo optio perspiciatis ullam repudiandae amet! Voluptatem at, distinctio error maiores iusto eius aliquid explicabo itaque harum! Suscipit rerum optio maxime illum ducimus magni iure, voluptas aut nihil necessitatibus facere, repellat nisi doloremque excepturi porro fugiat assumenda laboriosam similique neque officia temporibus, delectus quaerat. Atque quidem officia doloremque eligendi iste debitis nulla consectetur culpa eum, exercitationem illo tempora veritatis, numquam incidunt beatae dicta perspiciatis nisi, repellendus repellat minima recusandae error ex quo? Voluptates facilis odit accusamus eum sint odio, voluptatum impedit quia sapiente, necessitatibus fugit cumque neque non recusandae vel ab perferendis placeat maiores consequatur! Commodi consectetur suscipit facilis necessitatibus vel, quo provident vitae corrupti quibusdam consequatur, unde ipsa illo debitis! Itaque a nemo id odio, doloribus enim rem, asperiores reprehenderit repudiandae minima velit quae. Cumque, minima cupiditate earum placeat perferendis fugit error enim, repudiandae optio ratione necessitatibus iure modi quam suscipit saepe eos in sit a quasi iusto accusantium totam. Aperiam iste impedit atque hic nisi repellat quam, ut similique dolorum quia id, aut recusandae tempore optio aspernatur explicabo iusto cum nobis? Fugit expedita dolor fugiat optio ratione accusantium, natus ipsa quis id unde aperiam dolore eaque ex, molestias tempora labore. Eveniet velit molestias labore harum explicabo adipisci, officia magni quod tempore nobis porro reiciendis expedita totam omnis assumenda maiores sequi? Fugit, tempora. Consequatur sed maxime, omnis commodi consectetur soluta totam asperiores! Aspernatur blanditiis esse ipsa in provident nam rerum ducimus eum inventore ad eaque adipisci labore distinctio nesciunt quia culpa laboriosam tempora veritatis sed maxime similique, eos iure reprehenderit perferendis. Iure reprehenderit natus explicabo nihil est itaque possimus saepe fuga veritatis sunt mollitia similique, laudantium corrupti fugiat vel dolores ex alias in. Excepturi et eligendi libero alias, debitis cupiditate sunt soluta ab quaerat labore, nesciunt ea laboriosam omnis provident maiores neque non beatae obcaecati nobis perspiciatis. Modi esse reiciendis voluptates, magni praesentium, facere et voluptas blanditiis iste aperiam adipisci consequatur minus quod odit quos. Rerum tempora explicabo neque soluta laboriosam quas, animi veniam repudiandae officiis dolorem. Rem, repellat eligendi. Dignissimos iusto perferendis odio nemo quaerat ut, corrupti aut fugiat velit dicta. Provident natus, culpa impedit sit ea, ipsa possimus sed delectus consequuntur ab illum explicabo doloribus! Iste natus fuga libero eos minima, quas alias a ab quos adipisci autem hic itaque optio rerum quibusdam minus cum labore nihil aperiam quia praesentium, temporibus magni provident asperiores? Fugit at nobis aspernatur vitae unde quam molestias ullam quaerat praesentium aut earum eaque numquam dolorum perspiciatis commodi in, accusamus totam deserunt magni rerum. Ipsam aliquam atque quasi molestiae voluptatem harum eum, nihil, quis nisi quas beatae blanditiis laudantium ullam nostrum exercitationem? Rem magni aperiam qui labore vitae dolore, sed minus voluptatum, voluptas delectus quia illum beatae eius ad accusantium quibusdam dicta, error ut pariatur voluptate inventore libero nemo aliquid! Unde, amet rem! Fugit ipsum vel amet nostrum commodi mollitia! Odio suscipit quibusdam hic autem nisi vero at doloribus, ducimus voluptate nobis impedit aperiam. Quam a, incidunt tempora corrupti veniam culpa blanditiis aliquid id quaerat sint at velit voluptatum pariatur, ullam, eaque hic vel possimus. Qui repudiandae eaque voluptas necessitatibus corporis velit autem iste, quidem aspernatur provident accusamus sit perspiciatis hic quia soluta. Provident alias eaque harum magnam, possimus architecto molestias, distinctio dolor fugiat recusandae nostrum voluptates! Repudiandae exercitationem magnam debitis quasi quaerat eveniet aliquid, sapiente fugit earum, in autem? Aut, culpa aliquid obcaecati, maiores aliquam minima itaque ut eius non iste enim quidem harum aspernatur dolores quod eligendi. Sit, corrupti a laborum magni adipisci rerum at ad error, ipsa, ab repudiandae laboriosam expedita reiciendis qui saepe dolorum voluptatum! Dolorem fugiat quod repellendus maxime provident! Illo sequi odit doloribus officia non, laudantium sed blanditiis nobis quas fugit asperiores, minima ipsam dolore hic eligendi ad, consequuntur molestias expedita pariatur soluta. Dolores sint dolore voluptatem aspernatur dignissimos, distinctio labore velit, ea rerum cum placeat veritatis provident, tempora incidunt fugiat aut eos nobis exercitationem facere fuga. Nostrum, atque? In, qui. Dolorum quidem fugit, dolor facilis assumenda soluta dolore, maiores doloribus quam aperiam aliquid illum necessitatibus, eveniet vero aspernatur. Temporibus aliquam ratione atque similique ab magnam beatae vitae voluptatibus recusandae sint consequuntur omnis tenetur hic impedit velit quis quisquam eius, nisi molestiae pariatur. Dolores perferendis numquam amet. Fuga accusantium laudantium vel tempore? Dolore placeat consequatur reprehenderit officiis. Debitis esse neque quidem natus, magni itaque autem voluptatibus! Numquam enim ex, repellendus delectus quos rem, sequi totam placeat autem voluptate magnam tempore! Unde eum obcaecati nostrum excepturi beatae eaque itaque sit saepe corporis omnis esse fugit, quaerat pariatur eos quae quod dolorem voluptas fuga iusto, maiores laborum sapiente. Consectetur mollitia ea sapiente debitis laudantium adipisci quas exercitationem, voluptatibus cumque aperiam corporis, excepturi reprehenderit officiis maxime ullam veniam. Nesciunt, sequi. Dicta nisi, vel exercitationem commodi at tempora similique maxime labore voluptatibus, dolores ullam, consequuntur numquam quibusdam laboriosam. Quibusdam quia eum ab, dolorum voluptatibus ipsum reiciendis, nemo atque inventore aliquam et esse corporis illo culpa perferendis ratione, odit a itaque. Sunt.</p> -->
+            </section>
+
+            <section id="projects">
+                <h1>Projects</h1>
+                <div class="project">
+                    <img src="project1.jpg" alt="Project 1">
+                    <h2>Project 1</h2>
+                    <p>Description of Project 1</p>
+                </div>
+                <div class="project">
+                    <img src="project2.jpg" alt="Project 2">
+                    <h2>Project 2</h2>
+                    <p>Description of Project 2</p>
+                </div>
+                Add more projects here
+            </section>
+
+            <section id="contact">
+                <h1>Contact</h1>
+                <p>If you would like to get in touch, feel free to reach out:</p>
+                <ul>
+                    <li>Email: your.email@example.com</li>
+                    <li>Phone: (123) 456-7890</li>
+                </ul>
+            </section>
+        </main>
+
+    </body>
     <script>
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
-
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+        function navOpenClose() {
+            if(document.getElementById("myNav").style.height == "100%")
+            {
+                document.getElementById("myNav").style.height = "0%";
+                document.getElementById("closebtn").style.rotate = "45deg";
+                    
+            }
+            else 
+            {
+                document.getElementById("myNav").style.height = "100%";
+                document.getElementById("closebtn").style.rotate = "0deg";
+            }
         }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
-      }
-
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/portfolio.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/portfolio.data",
-        frameworkUrl: buildUrl + "/portfolio.framework.js",
-        codeUrl: buildUrl + "/portfolio.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "asteroids",
-        productVersion: "1.0",
-        showBanner: unityShowBanner,
-      };
-
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        container.className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
-      }
-
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
-        }).catch((message) => {
-          alert(message);
-        });
-      };
-      document.body.appendChild(script);
     </script>
-  </body>
 </html>
